--- a/_posts/2018-01-01-72-rolls-32-balls.html
+++ b/_posts/2018-01-01-72-rolls-32-balls.html
@@ -12,7 +12,7 @@ imgpath: /img/rolls/
   Meanwhile... from a completely unrelated set of conditions (during the same time period), an unusually large quantity of snooker balls became available for consideration.
 </p>
 <p>
-  Eventually the rolls and the balls were introduced and are now inseperable.
+  Eventually the rolls and the balls were introduced and are now inseparable.
 </p>
 <p>
   The composition of the piece is numerous as it adheres to a simple set of parameters.
