--- a/_posts/2018-01-02-posidonias.html
+++ b/_posts/2018-01-02-posidonias.html
@@ -8,7 +8,7 @@ imgpath: /img/posidonias
   Description: Posidonia Oceanica (commonly known as Neptune grass or Mediterranean tapeweed) is a plant that grows only in the Mediterranean and Caribbean seas.
 </p>
 <p>
-  The plant releases tiny fibres which, during their journey to reach the shore,  binding together to form small, hairy pebbles. These pebbles are collected and joined to create a large single necklace.
+  The plant releases tiny fibres which, during their journey to reach the shore, bind together to form small, hairy pebbles. These pebbles are collected and joined to create a large single necklace.
 </p>
 <p>
   A strand of the plant was discovered to measure 8 kilometres in length and has been growing for at least 100,000 years - making it the biggest and oldest living organism in the world today.
