--- a/_posts/2018-01-05-packing-tape-cones.html
+++ b/_posts/2018-01-05-packing-tape-cones.html
@@ -11,7 +11,7 @@ imgpath: /img/cone
   The form, though stable, has a fragility due to the tension present within the nature of the tape and its structure. This means that the overall form can be altered/adjusted through careful handling and manipulation.
 </p>
 <p>
-  The tape has a degree of transparency which produces a diffused glow to the surface of the form when a light source is housed within.
+  The tape has a degree of transparency which lends a diffused glow to the surface of the form when a light source is housed within.
 </p>
 <span>
   Approx. size 17cm x 7cm _ £32
