--- a/_posts/2018-01-02-posidonias.html
+++ b/_posts/2018-01-02-posidonias.html
@@ -14,5 +14,5 @@ imgpath: /img/posidonias
   A strand of the plant was discovered to measure 8 kilometres in length and has been growing for at least 100,000 years - making it the biggest and oldest living organism in the world today.
 </p>
 <span>
-  Circumference approx. 5 m - £1,200
+  Circumference approx. 5 m
 </span>
