--- a/_posts/2018-01-05-packing-tape-cones.html
+++ b/_posts/2018-01-05-packing-tape-cones.html
@@ -14,5 +14,5 @@ imgpath: /img/cone
   The tape has a degree of transparency which lends a diffused glow to the surface of the form when a light source is housed within.
 </p>
 <span>
-  Approx. size 17cm x 7cm _ £32
+  Approx. size 17cm x 7cm
 </span>
